<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (C) 2002-2025 Fabrizio Giustina, the Displaytag team

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in
    all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
    THE SOFTWARE.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>52</version>
        <relativePath />
    </parent>

    <groupId>com.github.hazendaz</groupId>
    <artifactId>displaytag-doc</artifactId>
    <version>3.2.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>displaytag-doc</name>

    <description>The display tag library is an open source suite of custom tags that provide high-level web presentation
    patterns which will work in an MVC model. The library provides a significant amount of functionality while still
    being easy to use.</description>

    <url>http://displaytag.sourceforge.net</url>
    <inceptionYear>2002</inceptionYear>

    <organization>
        <name>the Displaytag team</name>
        <url>http://sourceforge.net/projects/displaytag</url>
    </organization>

    <licenses>
        <license>
            <name>MIT</name>
            <url>LICENSE_HEADER</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>fgiust</id>
            <name>Fabrizio Giustina</name>
            <email>fgiust(at)users.sourceforge.net</email>
            <organization>Openmind</organization>
            <organizationUrl>http://www.openmindonline.it</organizationUrl>
            <roles>
                <role>Project admin and main developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>matt</id>
            <name>Matt Raible</name>
            <email>mraible(at)users.sourceforge.net</email>
            <organization>Raible Designs</organization>
            <roles>
                <role>Project admin</role>
            </roles>
            <timezone>-7</timezone>
        </developer>
        <developer>
            <id>rapruitt</id>
            <name>Andy Pruitt</name>
            <email>rapruitt(at)users.sourceforge.net</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>-6</timezone>
        </developer>
        <developer>
            <id>jluix</id>
            <name>Jorge Barroso</name>
            <email>jluix(at)users.sourceforge.net</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>-6</timezone>
        </developer>
        <developer>
            <id>javabencom</id>
            <name>Benjamin Simpson</name>
            <email>javabencom(at)users.sourceforge.net</email>
            <roles>
                <role>Documentation editor</role>
            </roles>
            <timezone>0</timezone>
        </developer>
        <developer>
            <id>pathoss</id>
            <name>Mathias Bogaert</name>
            <email>pathoss(at)users.sourceforge.net</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>0</timezone>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>Ed Hill</name>
            <email>ed-hill(at)users.sourceforge.net</email>
            <roles>
                <role>Initial developer of the tag library</role>
            </roles>
            <timezone>0</timezone>
        </contributor>
        <contributor>
            <name>Eric Dalquist</name>
            <roles>
                <role>JSR-168 support</role>
            </roles>
        </contributor>
        <contributor>
            <name>Jorge Barroso</name>
        </contributor>
    </contributors>

    <mailingLists>
        <mailingList>
            <name>Display tag library User Mailing list</name>
            <subscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-user</subscribe>
            <unsubscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-user</unsubscribe>
            <post />
            <archive>http://sourceforge.net/mailarchive/forum.php?forum=displaytag-user</archive>
        </mailingList>
        <mailingList>
            <name>Display tag library Developer Mailing list</name>
            <subscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-devel</subscribe>
            <unsubscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-devel</unsubscribe>
            <post />
            <archive>http://sourceforge.net/mailarchive/forum.php?forum=displaytag-devel</archive>
        </mailingList>
        <mailingList>
            <name>Display tag library Cvs Mailing list</name>
            <subscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-cvs</subscribe>
            <unsubscribe>http://lists.sourceforge.net/lists/listinfo/displaytag-cvs</unsubscribe>
            <post />
            <archive>http://sourceforge.net/mailarchive/forum.php?forum=displaytag-cvs</archive>
        </mailingList>
    </mailingLists>

    <modules>
        <module>displaytag</module>
        <module>displaytag-examples</module>
    </modules>
    <scm>
        <connection>scm:git:ssh://git@github.com/hazendaz/displaytag.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/hazendaz/displaytag.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/hazendaz/displaytag/</url>
    </scm>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/hazendaz/displaytag/issues</url>
    </issueManagement>
    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>Displaytag GitHub Pages</name>
            <url>scm:git:ssh://git@github.com/hazendaz/displaytag.git</url>
        </site>
    </distributionManagement>

    <properties>
        <java.version>11</java.version>
        <java.release.version>11</java.release.version>
        <java.test.version>11</java.test.version>
        <java.test.release.version>11</java.test.release.version>

        <!-- Automatic Module Name -->
        <module.name>org.displaytag.parent</module.name>

        <!-- Reproducible Builds -->
        <project.build.outputTimestamp>1744686297</project.build.outputTimestamp>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <phase>site</phase>
                        <configuration>
                            <target>
                                <copy flatten="true" overwrite="true" todir="src/site">
                                    <fileset dir="..">
                                        <include name="../src/site/site.xml" />
                                    </fileset>
                                </copy>
                                <replace dir=".." token="href=&quot;/" value="href=&quot;../">
                                    <include name="${project.artifactId}/src/site/site.xml" />
                                    <exclude name="displaytag-doc/src/site/site.xml" />
                                </replace>
                                <replace dir=".." token="href=&quot;../${project.artifactId}/" value="href=&quot;">
                                    <include name="${project.artifactId}/src/site/site.xml" />
                                    <exclude name="displaytag-doc/src/site/site.xml" />
                                </replace>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <configuration>
                    <rules>
                        <enforceBytecodeVersion>
                            <!-- Start: Remove after base-parent 51 upgrade -->
                            <maxJdkVersion>${java.version}</maxJdkVersion>
                            <ignoredScopes>provided,test</ignoredScopes>
                            <!-- End: Remove after base-parent 51 upgrade -->
                            <ignoreOptionals>true</ignoreOptionals>
                        </enforceBytecodeVersion>
                    </rules>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <systemPropertyVariables>
                        <property>
                            <name>java.awt.headless</name>
                            <value>true</value>
                        </property>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <excludes>
                                <exclude>**/*.jsp</exclude>
                                <exclude>**/docroot/**</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>io.github.weblegacy</groupId>
                <artifactId>taglib-maven-plugin</artifactId>
                <version>2.6</version>
            </plugin>
        </plugins>
    </reporting>
</project>
